# real-time-data-platform

./: .gitignore  README.md  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start_pipeline.bat  start_pipeline.ps1
api/: api_producer.py
dags/: exchange_rate_dag.py
db/: init_db.py
producer/: exchange_rate_producer.py
spark/: spark_anomaly_detection.py
src/real_time_data_platform/: main.py  producer.py  spark_job.py
