[project]
name = "real-time-data-platform"
version = "0.1.0"
description = ""
authors = [
    {name = "RANOELISON Dimbisoa Patrick",email = "ranoelisondimbisoapatrick@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "requests (>=2.32.5,<3.0.0)",
    "kafka-python (>=2.3.0,<3.0.0)",
    "pyspark (>=4.1.1,<5.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)"
]

[tool.poetry]
packages = [{include = "real_time_data_platform", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
